# f18-today-day2-4-zbeekman

./: .gitignore  README.md
src/Day-1/: CMakeLists.txt
src/Day-1/code-jams/: 01-goodbye-serial-world.f90  03-assertion-implementation.f90  04-hello-parallel-world.f90  CMakeLists.txt  README.md  emulated-collectives-implementation.f90  emulated-collectives-interface.f90  test-emulated-co_sum.f90
src/Day-1/grid/: CMakeLists.txt  cartesian-grid-interface.f90
src/Day-1/narrative/: 06-why-modules-use-module.f90  09-why-use-object-based-programming.F90  10-why-use-object-oriented-programming.F90
src/Day-1/tests/: CMakeLists.txt  blocks-definition.nml  test-cartesian-grid.f90
src/Day-1/tour/: 00-why-fortran-shortest-program.f  01-goodbye-serial-world.f90  02-assertions-interface.f90  03-assertions-implementation.f90  04-hello-parallel-world.f90  05-collective-load-check.f90  07-partition-interface.f90  08-partition-implementation.f90
src/Day-2/code-jams/: 05-collective-load-check.f90  CMakeLists.txt  emulated-collectives-implementation.f90  emulated-collectives-interface.f90  hierarchy.f90
src/Day-2/hands-on/: 05-collective-load-check.f90  CMakeLists.txt  code-jams
src/Day-2/prepared-code/: 06-test-partitioned-grid.f90  CMakeLists.txt  emulated_collectives_implementation.f90  emulated_collectives_interface.f90
src/Day-3/hands-on/: CMakeLists.txt  README.md  grid-parameters.nml  test-asymmetric-load-check.f90
src/Day-3/prepared-code/: CMakeLists.txt  functional-grid-interface.f90  solution  test-functional-grid.f90
src/Day-3/solution/: CMakeLists.txt  Day-1  class-diagram.xmi  class-diagram.xmi.zargo  structured-grid-implementation.f90  structured-grid-interface.f90  test-asymmetric-load-check.f90
src/collectives_unit_tests/: Makefile  collectives.F90
src/events/: expeller_module.mod
src/narrative/: 01-hello-world.f  02-hello-exoplanet.f90  03-why-modules-main.f  04-why-modules-external-subroutine.f90  05-why-modules-explicit-interface.f90  08-why-use-derived-types.F90
src/resources/coarrayHeatSimplified/: Makefile
src/resources/collectives_unit_tests/: collectives_test.f90
src/resources/events/: ooparticles.f90
src/resources/grid/: CMakeLists.txt  block-structured-grid-implementation.f90  block-structured-grid-interface.f90
src/resources/narrative/: 00-why-fortran-shortest-program.f  07-implicit-synchronization.f90
src/resources/teams/: get-team.f90
src/resources/tests/: test-block-structured-grid.f90  test-cartesian-grid.f90
src/teams/: team-number.f90
